# llm-report-generation

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXECUTIVE_SUMMARY.md  README.md  agent_orchestration_flow.ipynb  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
config/: __init__.py  schemas.py  settings.py
outputs/reports/: bmw_sales_report_20251121_171502.md  bmw_sales_report_20251121_195049.md
scripts/: docker-compose-up.sh  fix-permissions.sh  run_analysis.py
src/: __init__.py
src/data/: analyzer.py  column_mapper.py  loader.py  profiler.py
src/evaluation/: evaluator.py  metrics.py
src/llm/: __init__.py  graph.py  llm_factory.py  nodes.py  prompts.py  state.py  tools.py  utils.py
src/reporting/: compiler.py  html_generator.py  markdown_generator.py  pdf_generator.py  word_generator.py
src/utils/: logger.py
src/visualization/: plotter.py  themes.py
streamlit_app/: app.py
tests/: conftest.py  test_config.py  test_data_analyzer.py  test_data_loader.py  test_integration.py  test_visualization.py
