[project]
name = "llm-report-generation"
version = "0.1.0"
description = "BMW Sales Analysis - LLM-Powered Automated Report Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    # LLM Providers
    "langchain-ollama>=1.0.0",
    "langchain-google-genai>=0.0.6",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    # Data Processing
    "pandas>=2.0.0",
    "pyarrow==22.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "dirtyjson>=1.0.0",
    # Report Generation
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    # Configuration & Utils
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    # UI
    "streamlit>=1.30.0",
    # CLI
    "typer>=0.9.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ipykernel>=7.1.0",
    "langchain-ollama>=1.0.0",
]
